--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,17 +7,12 @@
     tools:context=".register.RegisterActivity"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/tvMatarak"
+    <ImageView
+        android:id="@+id/ivMatarak"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="@string/matarak"
-        android:textColor="@color/matarak"
-        android:textSize="36sp"
-        android:textStyle="bold"
+        android:layout_height="100dp"
+        android:src="@drawable/logotextmatarak"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,13 +21,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:text="@string/fullName"
         android:textColor="@color/matarak"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvMatarak" />
+        app:layout_constraintTop_toBottomOf="@+id/ivMatarak" />
 
     <EditText
         android:id="@+id/etName"
@@ -153,39 +148,42 @@
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="20dp"
         android:text="@string/Login"
         android:textColor="@color/matarak"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/BtnRegis"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/tvLogin" />
+        app:layout_constraintStart_toEndOf="@+id/tvLogin"
+        app:layout_constraintTop_toBottomOf="@+id/BtnRegis" />
 
     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="86dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="12dp"
         android:text="@string/sudah_punya_akun"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/BtnRegis"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnRegis" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/BtnRegis"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@drawable/custom_button"
         android:text="@string/registration"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
