--- a/app/src/main/res/layout/activity_detail_article.xml
+++ b/app/src/main/res/layout/activity_detail_article.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".detailarticle.DetailArticleActivity"
+    android:paddingBottom="20dp"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
@@ -21,9 +22,9 @@
 
         <TextView
             android:id="@+id/tvDetailTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="30dp"
             android:text="Title"
             android:textSize="20sp"
@@ -40,15 +41,16 @@
             android:layout_marginTop="10dp"
             android:text="Title"
             android:textSize="14sp"
+            android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
         <TextView
             android:id="@+id/tvDetailSource"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="10dp"
             android:text="Title"
             android:textSize="12sp"
