--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
     <FrameLayout
         android:id="@+id/flFragment"
+        android:paddingBottom="55dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
