--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -24,7 +24,7 @@
         android:drawableStart="@drawable/ic_assignment"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/name"
         android:inputType="textPersonName"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:editable="false"
         android:textSize="14sp"
@@ -67,7 +67,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:text="Birthdate"
+            android:text="@string/birthdate"
             android:drawablePadding="10dp"
             app:drawableStartCompat="@drawable/ic_calendar"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
             style="@style/Base.Widget.AppCompat.ImageButton"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:contentDescription="openDatePicker"
+            android:contentDescription="@string/opendatepicker"
             android:src="@drawable/ic_edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:drawableStart="@drawable/ic_location"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="Location"
+        android:hint="@string/location"
         android:inputType="text"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +135,7 @@
         android:layout_height="wrap_content"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:text="Save"
+        android:text="@string/save"
         android:textAllCaps="false"
         android:layout_marginTop="50dp"
         app:backgroundTint="@color/matarak"
