--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Nama Orang"
+        android:text="@string/nama_orang"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -39,7 +39,7 @@
         android:layout_marginTop="30dp"
         android:drawablePadding="15dp"
         android:drawableTint="?android:attr/textColorPrimary"
-        android:text="anongtf26@gmail.com"
+        android:text="@string/anongtf26_gmail_com"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="18sp"
         app:drawableStartCompat="@drawable/ic_email"
@@ -54,7 +54,7 @@
         android:layout_marginTop="20dp"
         android:drawablePadding="15dp"
         android:drawableTint="?android:attr/textColorPrimary"
-        android:text="26 February 2002"
+        android:text="@string/_26_february_2002"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="18sp"
         app:drawableStartCompat="@drawable/ic_calendar"
@@ -69,7 +69,7 @@
         android:layout_marginTop="20dp"
         android:drawablePadding="15dp"
         android:drawableTint="?android:attr/textColorPrimary"
-        android:text="Serang, Petarukan, Pemalang"
+        android:text="@string/serang_petarukan_pemalang"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="18sp"
         app:drawableStartCompat="@drawable/ic_location"
@@ -84,7 +84,7 @@
         android:layout_marginTop="20dp"
         android:drawablePadding="15dp"
         android:drawableTint="?android:attr/textColorPrimary"
-        android:text="Male"
+        android:text="@string/male"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="18sp"
         app:drawableStartCompat="@drawable/ic_gender"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
-        android:text="Logout"
+        android:text="@string/logout"
         android:textAllCaps="false"
         android:insetBottom="0dp"
         android:insetTop="0dp"
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Edit Profile"
+        android:text="@string/edit_profile"
         android:textAllCaps="false"
         android:insetBottom="0dp"
         android:insetTop="0dp"
